Setup af layout

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <!-- onclick lukker overlay. #top går til a tag med navn top. class smoothscroll aktivere smoothscroll -->
         <a href="#top" class="smoothScroll" onclick="closeNav()">FORSIDE</a>
 
-        <a href="undersider/tobias.html">2</a>
-        <a href="#">3</a>
+        <a class="smoothScroll" href="#footer" onclick="closeNav()">KONTAKT</a>
+        <a href="undersider/kontakt.html">Contact</a>
         <a href="#">4</a>
         <!-- onclick lukker overlay. #footer går til a tag med navn footer. class smoothscroll aktivere smoothscroll -->
 
@@ -57,6 +57,7 @@
 
 <!--- landing------>
 <section class="grid landing">
+    <h1><span class="red">Wine</span> for a new generation</h1>
 
     <!--- HEADER ------->
     <div class="header forside">
@@ -105,14 +106,25 @@
 
     <div class="vinen-flasken">
 
+        Her skal der være et billede af falseken
+
     </div>
 
     <div class="vinen-label">
 
+        her skal der stå merlot. Har ingen ide om hvordan vi gør. Måske er det nemmest hvis vi bruger et billede
+
     </div>
 
     <div class="vinen-tekst">
+        <div class="overlayfarvered">
 
+        <h2>this wine is fine</h2>
+        Noget om vinen og knapper
+        <button>Merlot</button>
+        <button>Muscat</button>
+
+    </div>
     </div>
 
 
@@ -122,7 +134,11 @@
 <section class="grid gaarden">
 
     <div class="gaarden-beskrivelse">
-        <h3 style="text-align: center">Domino de Pontas</h3>
+        <h2 style="text-align: center">Domino de Pontas</h2>
+
+        Her skal der stå noget om garden
+
+
 
     </div>
 
@@ -134,6 +150,14 @@
 <section class="grid instagram">
 
     <div class="instagram-tal">
+
+        <div class="overlayfarvewhite">
+
+        <h1><span class="red">13k</span></h1>
+
+            <button> klik her</button>
+
+        </div>
 
     </div>
 
@@ -188,8 +212,11 @@
 
 </section>
 
-<section class="grid footer">
+<!--- footer------>
 
+<section class="grid footer">
+    <a name="footer"></a>
+    <h1>contact</h1>
 
 
 </section>
