Setup af layout

--- a/index.html
+++ b/index.html
@@ -106,13 +106,11 @@
 
     <div class="vinen-flasken">
 
-        Her skal der være et billede af falseken
+
 
     </div>
 
     <div class="vinen-label">
-
-        her skal der stå merlot. Har ingen ide om hvordan vi gør. Måske er det nemmest hvis vi bruger et billede
 
     </div>
 
@@ -120,11 +118,17 @@
         <div class="overlayfarvered">
 
         <h2>this wine is fine</h2>
-        Noget om vinen og knapper
-        <button>Merlot</button>
-        <button>Muscat</button>
+        <p>Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.</p>
 
-    </div>
+         <div class="knapper">
+
+            <div class="ghost-button" onclick="closeNav()">MERLOT</div>
+
+            <div class="ghost-button">MUSCAT</div>
+
+         </div>
+
+        </div>
     </div>
 
 
@@ -134,9 +138,9 @@
 <section class="grid gaarden">
 
     <div class="gaarden-beskrivelse">
-        <h2 style="text-align: center">Domino de Pontas</h2>
+        <h2 style="text-align: center">Domino <span class="red" style="font-size: 30px">de</span> Pontas</h2>
 
-        Her skal der stå noget om garden
+        <p>Duis a, erat massa lectus sapien lacus nulla amet, urna orci tempor consectetuer wisi donec, amet odio nec elit aliquam justo. In libero proin faucibus sed, pede facilisi dolor vestibulum sed sit. Praesent vel ante, vivamus tempor velit libero tempus pellentesque ligula, vivamus ac eleifend, volutpat posuere a rutrum ducimus in. Velit massa, justo pretium eros, maecenas vestibulum, nec congue in. Ad posuere blandit mattis in cras, porta in nunc. Sed sed non, senectus praesent senectus urna eu ultricies gravida, est cras, eget lectus luctus quam id luctus porttitor, vitae sagittis.</p>
 
 
 
@@ -155,7 +159,9 @@
 
         <h1><span class="red">13k</span></h1>
 
-            <button> klik her</button>
+            <p>Follow us</p>
+
+            <div class="ghost-button">FOLLOW US</div>
 
         </div>
 
