Setup af layout

--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
         <!-- onclick lukker overlay. #top går til a tag med navn top. class smoothscroll aktivere smoothscroll -->
         <a href="#top" class="smoothScroll" onclick="closeNav()">FORSIDE</a>
 
-        <a class="smoothScroll" href="#footer" onclick="closeNav()">KONTAKT</a>
-        <a href="undersider/kontakt.html">Contact</a>
-        <a href="#">4</a>
+        <a class="smoothScroll" href="#thevinyard" onclick="closeNav()">THE VINYARD</a>
+        <a class="smoothScroll" href="#theregion" onclick="closeNav()">THE REGION</a>
+        <a href="undersider/kontakt.html">CONTACT</a>
+
         <!-- onclick lukker overlay. #footer går til a tag med navn footer. class smoothscroll aktivere smoothscroll -->
 
     </div>
@@ -135,6 +136,7 @@
 </section>
 
 <!---gaarden----->
+<a name="thevinyard"></a>
 <section class="grid gaarden">
 
     <div class="gaarden-beskrivelse">
@@ -195,6 +197,7 @@
 </section>
 
 <!---stedet---->
+<a name="theregion"></a>
 <section class="grid stedet">
 
     <div class="stedet-beskrivelse">
