--- a/undersider/kontakt.html
+++ b/undersider/kontakt.html
@@ -45,11 +45,11 @@
     <div class="overlay-content">
 
         <!-- onclick lukker overlay. #top går til a tag med navn top. class smoothscroll aktivere smoothscroll -->
-        <a href="#top" class="smoothScroll" onclick="closeNav()">FORSIDE</a>
+        <a href="../index.html">HOME</a>
 
-        <a href="../index.html">home</a>
-        <a href="#">3</a>
-        <a href="#">4</a>
+        <a href="#top" class="smoothScroll" onclick="closeNav()">TOP</a>
+
+
         <!-- onclick lukker overlay. #footer går til a tag med navn footer. class smoothscroll aktivere smoothscroll -->
 
     </div>
