Google maps - kontaktside

--- a/undersider/kontakt.html
+++ b/undersider/kontakt.html
@@ -106,7 +106,13 @@
 <section class="grid kontaktinfo" >
 
     <div class="form">
-        Her er kontkatformen
+        <h2> <span style="color: #750002">Vinsmagning</span> og andre spændene events</h2>
+
+        <div class="region_beskrivelse">
+            Tilmeld dig vores nyhedsbrev og bliv blandt
+            de første til at modtage nyheder, invitationer
+            og informationer om begivenhedsrige events
+        </div>
 
     </div>
 
