Google maps - kontaktside

--- a/undersider/kontakt.html
+++ b/undersider/kontakt.html
@@ -114,6 +114,10 @@
             og informationer om begivenhedsrige events
         </div>
 
+        <div class="nyhedsinput">
+
+        </div>
+
     </div>
 
     <div class="find-us">
