--- a/index.html
+++ b/index.html
@@ -217,8 +217,12 @@
 
 <!---kort----->
 <section class="grid kort">
-<h2>Buy the wine</h2>
 
+    <div class="buy">
+        <h2 style="color: black">Buy the wine</h2>
+        <p style="color: #750002">Find a local shop</p>
+
+    </div>
 
 </section>
 
