--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
 
     </div>
 
-    <div class="vinen-label">
+    <div class="vinen-label tablet">
+
 
     </div>
 
@@ -160,7 +161,7 @@
 
         <div class="overlayfarvewhite">
 
-        <h1><span class="red">13k</span></h1>
+        <h1 class="h1hojde"><span class="red">13k</span></h1>
 
             <p>Follow us</p>
 
@@ -203,10 +204,10 @@
 
     <div class="stedet-beskrivelse">
         <h1>The best place to make <span class="red">wine</span></h1>
-
+        <p>Her skal der stå noget</p>
     </div>
 
-    <div class="stedet-boks">
+    <div class="stedet-boks mobil">
 
     </div>
 
@@ -221,6 +222,10 @@
     <div class="buy">
         <h2 style="color: black">Buy the wine</h2>
         <p style="color: #750002">Find a local shop</p>
+        <form action="/action_page.php">
+            <input type="text" name="City" value="Location"><br>
+            <input class="ghost-button form" type="submit" value="Search">
+        </form>
     </div>
 
 </section>
