--- a/undersider/kontakt.html
+++ b/undersider/kontakt.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../css/hamburgers.css">
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
     <script src="https://use.fontawesome.com/75970a48c3.js"></script>
+    <script src="https://use.fontawesome.com/75970a48c3.js"></script>
     <script src="../javascript/script.js"></script>
 
     <!--Linker til jquery -->
