Setup af layout

--- a/index.html
+++ b/index.html
@@ -163,10 +163,13 @@
 
         <h1 class="h1hojde"><span class="red">13k</span></h1>
 
-            <p>Follow us</p>
+            <div class="sort">
 
-            <div class="ghost-button">FOLLOW US</div>
+                <p>Followers</p>
 
+                <div class="ghost-button">FOLLOW US</div>
+
+            </div>
         </div>
 
     </div>
@@ -204,7 +207,7 @@
 
     <div class="stedet-beskrivelse">
         <h1>The best place to make <span class="red">wine</span></h1>
-        <p>Her skal der stå noget</p>
+        <p>Duis a, erat massa lectus sapien lacus nulla amet, urna orci tempor consectetuer wisi donec, amet odio nec elit aliquam justo. In libero proin faucibus sed, pede facilisi dolor vestibulum sed sit. Praesent vel ante, vivamus tempor velit libero tempus pellentesque ligula, vivamus ac eleifend, volutpat posuere a rutrum ducimus in. Velit massa, justo pretium eros, maecenas vestibulum, nec congue in. Ad posuere blandit mattis in cras, porta in nunc. Sed sed non, senectus praesent senectus urna eu ultricies gravida, est cras, eget lectus luctus quam id luctus porttitor, vitae sagittis.</p>
     </div>
 
     <div class="stedet-boks mobil">
