Setup af layout

--- a/undersider/kontakt.html
+++ b/undersider/kontakt.html
@@ -115,13 +115,13 @@
             og informationer om begivenhedsrige events
         </div>
 
-        <div class="nyhedsinput">
+        <div class="nyhedsinput ">
 
         </div>
 
     </div>
 
-    <div class="find-us">
+    <div class="find-us tablet">
 
     </div>
 
@@ -167,16 +167,16 @@
 
     <div class="contact_flex" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 
-        <div class="contect_info"><i class="fas fa-phone" data-fa-transform="rotate-90"></i>
+        <div class="contect_info"><i class="fa fa-phone" data-fa-transform="rotate-90"></i>
             <span itemprop="telephone">20 30 20 30</span>
         </div>
 
-        <div class="contect_info"><i class="fas fa-map-marker-alt"></i>
+        <div class="contect_info"><i class="fa fa-map-marker"></i>
             <span itemprop="streetAddress">Vej 3</span>,
             <span itemprop="addressLocality">Byispanien, spanien</span>
         </div>
 
-        <div class="contect_info"><i class="far fa-envelope"></i>
+        <div class="contect_info"><i class="fa fa-envelope"></i>
             <span itemprop="email">Contact@pontas.com</span>
         </div>
 
@@ -185,9 +185,9 @@
     <div class="getintouch">Follow us</div>
 
     <div class="SoMe">
-        <div class="SoMe_icon"> <i class="fab fa-facebook-square fa-2x"></i> </div>
+        <div class="SoMe_icon"> <i class="fa fa-facebook-square fa-2x"></i> </div>
 
-        <div class="SoMe_icon"> <i class="fab fa-instagram fa-2x"></i> </div>
+        <div class="SoMe_icon"> <i class="fa fa-instagram fa-2x"></i> </div>
     </div>
 
 </footer>
