Javascript til flasker

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <!--- vinen------>
 <section class="grid vinen">
 
-    <div class="vinen-flasken">
+    <div class="vinen-flasken" id="wine">
 
 
 
@@ -125,9 +125,9 @@
 
          <div class="knapper">
 
-            <div class="ghost-button" onclick="closeNav()">MERLOT</div>
+            <div class="ghost-button" onclick="wineMerlot()" >MERLOT</div>
 
-            <div class="ghost-button">MUSCAT</div>
+            <div class="ghost-button"  onclick="wineMuscat()" >MUSCAT</div>
 
          </div>
 
