--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="overlay-content">
 
         <!-- onclick lukker overlay. #top går til a tag med navn top. class smoothscroll aktivere smoothscroll -->
-        <a href="#top" class="smoothScroll" onclick="closeNav()">FORSIDE</a>
+        <a href="#top" class="smoothScroll" onclick="closeNav()">HOME</a>
 
         <a class="smoothScroll" href="#thevinyard" onclick="closeNav()">THE VINYARD</a>
         <a class="smoothScroll" href="#theregion" onclick="closeNav()">THE REGION</a>
