--- a/undersider/kontakt.html
+++ b/undersider/kontakt.html
@@ -115,7 +115,7 @@
             og informationer om begivenhedsrige events
         </div>
 
-        <div class="nyhedsinput ">
+        <div class="nyhedsinput "> id
 
         </div>
 
