--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </div>
 
 <!--- landing------>
-<section class="grid landing">
+<header class="grid landing">
     <h1><span class="red">Wine</span> for a new generation</h1>
 
     <!--- HEADER ------->
@@ -101,7 +101,7 @@
 
     </div>
 
-</section>
+</header>
 
 <!--- vinen------>
 <section class="grid vinen">
