--- a/undersider/kontakt.html
+++ b/undersider/kontakt.html
@@ -57,7 +57,7 @@
 </div>
 
 <!--- landing------>
-<section class="grid landing">
+<header class="grid landing">
     <h1><span class="red">Wine</span> for a new generation</h1>
 
     <!--- HEADER ------->
@@ -100,7 +100,7 @@
 
     </div>
 
-</section>
+</header>
 
 <!--- kontaktinfo------>
 
