Navigationen har fået semantisk tag i form af "nav" istedet for div

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div id="myNav" class="overlay">
 
     <!-- Overlay content. De links der kommer frem -->
-    <div class="overlay-content">
+    <nav class="overlay-content">
 
         <!-- onclick lukker overlay. #top går til a tag med navn top. class smoothscroll aktivere smoothscroll -->
         <a href="#top" class="smoothScroll" onclick="closeNav()">HOME</a>
@@ -54,7 +54,7 @@
 
         <!-- onclick lukker overlay. #footer går til a tag med navn footer. class smoothscroll aktivere smoothscroll -->
 
-    </div>
+    </nav>
 </div>
 
 <!--- landing------>
