--- a/undersider/kontakt.html
+++ b/undersider/kontakt.html
@@ -107,12 +107,10 @@
 <section class="grid kontaktinfo" >
 
     <div class="form">
-        <h2> <span style="color: #750002">Vinsmagning</span> og andre spændene events</h2>
+        <h2> Wine<span style="color: #750002">tasting</span> and other fascinating events</h2>
 
         <div class="region_beskrivelse">
-            Tilmeld dig vores nyhedsbrev og bliv blandt
-            de første til at modtage nyheder, invitationer
-            og informationer om begivenhedsrige events
+            Sign up for our newsletter and be among the first to receive news, invitations and information about events.
         </div>
 
         <form action="/action_page.php" class="newletter">
@@ -120,7 +118,7 @@
             <br><br>
             <input type="text" name="mail" placeholder="E-mail" id="conin">
             <br><br>
-            <div class="ghost-button" id="send-alert">Send</div>
+            <div class="ghost-button" id="send-alert">Sign Up</div>
         </form>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
