Javascript til flasker

--- a/undersider/wine.html
+++ b/undersider/wine.html
@@ -31,45 +31,45 @@
     <script>
         $(document).ready(function(){
             $(".merlot").click(function(){
-                $("#theGrape").text("Merlot");
-                $("#theGrapetekst").text("Merlot");
-                $("#theWine").text("Merlot");
-                $("#theWinetekst").text("Merlot");
+                $("#theGrape").text("How is our Merlot wine made");
+                $("#theGrapetekst").text("Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.");
+                $("#theWine").text("About the grape");
+                $("#theWinetekst").text("Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.");
                 $('.flasken').fadeTo('slow', 0.3, function()
                 {
-                    $(this).css('background-image', "url(\"../images/merlot.png\")");
+                    $(this).css('background-image', "url(\"../images/merlot-falske.jpg\")");
                 }).fadeTo('slow', 1);
 
                 $('.baggrund1').fadeTo('slow', 0.3, function()
                 {
-                    $(this).css('background-image', "url(\"../images/merlot.png\")");
+                    $(this).css('background-image', "url(\"../images/stedet.png\")");
                 }).fadeTo('slow', 1);
 
                 $('.baggrund2').fadeTo('slow', 0.3, function()
                 {
-                    $(this).css('background-image', "url(\"../images/merlot.png\")");
+                    $(this).css('background-image', "url(\"../images/instagramfoto2.jpeg\")");
                 }).fadeTo('slow', 1);
             });
             $(".muscat").click(function(){
-                $("#theGrape").text("muscat");
-                $("#theGrapetekst").text("muscat");
-                $("#theWine").text("muscat");
-                $("#theWinetekst").text("muscat");
+                $("#theGrape").text("How is our Muscat wine made");
+                $("#theGrapetekst").text("Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.");
+                $("#theWine").text("About the grape");
+                $("#theWinetekst").text("Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.");
 
 
                 $('.flasken').fadeTo('slow', 0.3, function()
                 {
-                    $(this).css('background-image', "url(\"../images/kort.png\")");
+                    $(this).css('background-image', "url(\"../images/Muscat-flaske.png\")");
                 }).fadeTo('slow', 1);
 
                 $('.baggrund1').fadeTo('slow', 0.3, function()
                 {
-                    $(this).css('background-image', "url(\"../images/kort.png\")");
+                    $(this).css('background-image', "url(\"../images/instagramfoto3.jpeg\")");
                 }).fadeTo('slow', 1);
 
                 $('.baggrund2').fadeTo('slow', 0.3, function()
                 {
-                    $(this).css('background-image', "url(\"../images/kort.png\")");
+                    $(this).css('background-image', "url(\"../images/instagramfoto4.jpeg\")");
                 }).fadeTo('slow', 1);
             });
         });
@@ -172,7 +172,7 @@
 
     <div class="baggrund1"></div>
     <div class="overlayfarvered tekstTheGrape">
-        <h2 id="theGrape">MERLOT</h2>
+        <h2 id="theGrape">How is our Merlot wine made</h2>
         <p id="theGrapetekst">Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.</p>
     </div>
 
@@ -181,7 +181,7 @@
 <section class="grid theWine">
     <div class="baggrund2"></div>
     <div class="overlayfarvered tekstTheWine">
-        <h2 id="theWine">made with love</h2>
+        <h2 id="theWine">About the grape</h2>
         <p id="theWinetekst">Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.</p>
     </div>
 
