--- a/undersider/wine.html
+++ b/undersider/wine.html
@@ -30,25 +30,30 @@
 
     <script>
         $(document).ready(function(){
+            $(".theGrape").slideUp(1);
+            $(".theWine").slideUp(1);
+
             $(".merlot").click(function(){
                 $("#theGrape").text("How is our Merlot wine made");
                 $("#theGrapetekst").text("Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.");
                 $("#theWine").text("About the grape");
                 $("#theWinetekst").text("Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.");
-                $('.flasken').fadeTo('slow', 0.3, function()
+                $('.flasken').fadeTo( 1, 1, function()
                 {
                     $(this).css('background-image', "url(\"../images/merlot-falske.jpg\")");
                 }).fadeTo('slow', 1);
 
-                $('.baggrund1').fadeTo('slow', 0.3, function()
+                $('.baggrund1').fadeTo( 1, 1, function()
                 {
                     $(this).css('background-image', "url(\"../images/stedet.png\")");
                 }).fadeTo('slow', 1);
 
-                $('.baggrund2').fadeTo('slow', 0.3, function()
-                {
-                    $(this).css('background-image', "url(\"../images/instagramfoto2.jpeg\")");
-                }).fadeTo('slow', 1);
+                $('.baggrund2').fadeTo( 1, 1, function() {
+                    $(this).css('background-image', "url(\"../images/croks.jpeg\")");
+                }).fadeTo('fast', 1);
+
+                $(".theGrape").slideDown();
+                $(".thewine").slideDown();
             });
             $(".muscat").click(function(){
                 $("#theGrape").text("How is our Muscat wine made");
@@ -57,20 +62,23 @@
                 $("#theWinetekst").text("Lorem ipsum dolor sit amet, mauris bibendum praesent, sit vel odio justo similique, expedita id dignissim felis. Enim ipsum donec pede arcu, in diamlorem quam, dui sem id donec sit montes posuere, condimentum nullam urna sed et libero, pulvinar erat. Accumsan quisque, suspendisse ut, amet tincidunt, sociis enim dolor parturient arcu habitant montes.");
 
 
-                $('.flasken').fadeTo('slow', 0.3, function()
+                $('.flasken').fadeTo(1, 1, function()
                 {
                     $(this).css('background-image', "url(\"../images/Muscat-flaske.png\")");
                 }).fadeTo('slow', 1);
 
-                $('.baggrund1').fadeTo('slow', 0.3, function()
+                $('.baggrund1').fadeTo(1, 1, function()
                 {
                     $(this).css('background-image', "url(\"../images/instagramfoto3.jpeg\")");
                 }).fadeTo('slow', 1);
 
-                $('.baggrund2').fadeTo('slow', 0.3, function()
-                {
-                    $(this).css('background-image', "url(\"../images/instagramfoto4.jpeg\")");
+                $('.baggrund2').fadeTo(1, 1, function() {
+                    $(this).css('background-image', "url(\"../images/croks.jpeg\")");
                 }).fadeTo('slow', 1);
+
+                $(".theGrape").slideDown();
+                $(".thewine").slideDown();
+
             });
         });
     </script>
