Javascript til flasker

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <!-- onclick lukker overlay. #top går til a tag med navn top. class smoothscroll aktivere smoothscroll -->
         <a href="#top" class="smoothScroll" onclick="closeNav()">HOME</a>
-
+        <a href="undersider/wine.html">The Wine</a>
         <a class="smoothScroll" href="#thevinyard" onclick="closeNav()">THE VINYARD</a>
         <a class="smoothScroll" href="#theregion" onclick="closeNav()">THE REGION</a>
         <a href="undersider/kontakt.html">CONTACT</a>
