--- a/undersider/kontakt.html
+++ b/undersider/kontakt.html
@@ -47,6 +47,7 @@
 
         <!-- onclick lukker overlay. #top går til a tag med navn top. class smoothscroll aktivere smoothscroll -->
         <a href="../index.html">HOME</a>
+        <a href="wine.html">The Wine</a>
 
         <a href="#top" class="smoothScroll" onclick="closeNav()">TOP</a>
 
