--- a/undersider/wine.html
+++ b/undersider/wine.html
@@ -197,28 +197,21 @@
 
 </section>
 
-<section>
-
-
-
-</section>
-
-
 <!--- footer------>
 
-<footer class="grid footer">
+<footer class="grid footer" itemscope itemtype="http://schema.org/LocalBusiness">
     <a name="footer"></a>
     <h1 class="contact_footer">contact</h1>
 
     <div class="getintouch">Get in touch</div>
 
-    <div class="contact_flex" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+    <div class="contact_flex">
 
         <div class="contect_info"><i class="fas fa-phone" data-fa-transform="rotate-90"></i>
             <span itemprop="telephone">20 30 20 30</span>
         </div>
 
-        <div class="contect_info"><i class="fas fa-map-marker-alt"></i>
+        <div class="contect_info" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fas fa-map-marker-alt"></i>
             <span itemprop="streetAddress">Vej 3</span>,
             <span itemprop="addressLocality">Byispanien, spanien</span>
         </div>
