--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <!-- onclick lukker overlay. #top går til a tag med navn top. class smoothscroll aktivere smoothscroll -->
         <a href="#top" class="smoothScroll" onclick="closeNav()">HOME</a>
-        <a href="undersider/wine.html">The Wine</a>
+        <a href="undersider/wine.html">THE WINE</a>
         <a class="smoothScroll" href="#thevinyard" onclick="closeNav()">THE VINYARD</a>
         <a class="smoothScroll" href="#theregion" onclick="closeNav()">THE REGION</a>
         <a href="undersider/kontakt.html">CONTACT</a>
@@ -226,7 +226,7 @@
         <h2 style="color: black">Buy the wine</h2>
         <p style="color: #750002">Find a local shop</p>
         <form action="/action_page.php">
-            <input type="text" name="City" value="Location"><br>
+            <input type="text" name="City" placeholder="Location" class="locationInput"><br>
             <input class="ghost-button form" type="submit" value="Search">
         </form>
     </div>
