--- a/undersider/kontakt.html
+++ b/undersider/kontakt.html
@@ -22,6 +22,7 @@
     <script src="https://use.fontawesome.com/75970a48c3.js"></script>
     <script src="https://use.fontawesome.com/75970a48c3.js"></script>
     <script src="../javascript/script.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
     <!--Linker til jquery -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -47,7 +48,7 @@
 
         <!-- onclick lukker overlay. #top går til a tag med navn top. class smoothscroll aktivere smoothscroll -->
         <a href="../index.html">HOME</a>
-        <a href="wine.html">The Wine</a>
+        <a href="wine.html">THE WINE</a>
 
         <a href="#top" class="smoothScroll" onclick="closeNav()">TOP</a>
 
@@ -192,24 +193,24 @@
 
 <!--- footer------>
 
-<footer class="grid footer">
+<footer class="grid footer" itemscope itemtype="http://schema.org/LocalBusiness">
     <a name="footer"></a>
     <h1 class="contact_footer">contact</h1>
 
     <div class="getintouch">Get in touch</div>
 
-    <div class="contact_flex" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+    <div class="contact_flex">
 
-        <div class="contect_info"><i class="fa fa-phone" data-fa-transform="rotate-90"></i>
+        <div class="contect_info"><i class="fas fa-phone" data-fa-transform="rotate-90"></i>
             <span itemprop="telephone">20 30 20 30</span>
         </div>
 
-        <div class="contect_info"><i class="fa fa-map-marker"></i>
+        <div class="contect_info" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fas fa-map-marker-alt"></i>
             <span itemprop="streetAddress">Vej 3</span>,
             <span itemprop="addressLocality">Byispanien, spanien</span>
         </div>
 
-        <div class="contect_info"><i class="fa fa-envelope"></i>
+        <div class="contect_info"><i class="far fa-envelope"></i>
             <span itemprop="email">Contact@pontas.com</span>
         </div>
 
@@ -218,9 +219,9 @@
     <div class="getintouch">Follow us</div>
 
     <div class="SoMe">
-        <div class="SoMe_icon"> <i class="fa fa-facebook-square fa-2x"></i> </div>
+        <div class="SoMe_icon"> <i class="fab fa-facebook-square fa-2x"></i> </div>
 
-        <div class="SoMe_icon"> <i class="fa fa-instagram fa-2x"></i> </div>
+        <div class="SoMe_icon"> <i class="fab fa-instagram fa-2x"></i> </div>
     </div>
 
 </footer>
