--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
     <script src="javascript/script.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
+    <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!--Linker til jquery -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <!--Linker til smoothscroll fil-->
     <script type="text/javascript" src="javascript/smoothscroll.js"></script>
 
-
-
-    <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
@@ -142,7 +141,7 @@
 <section class="grid gaarden">
 
     <div class="gaarden-beskrivelse">
-        <h2 style="text-align: center">Domino <span class="red" style="font-size: 30px">de</span> Pontas</h2>
+        <h2 style="text-align: center"> Dominio <span class="red" style="font-size: 30px">de</span> Pontas</h2>
 
         <p>Duis a, erat massa lectus sapien lacus nulla amet, urna orci tempor consectetuer wisi donec, amet odio nec elit aliquam justo. In libero proin faucibus sed, pede facilisi dolor vestibulum sed sit. Praesent vel ante, vivamus tempor velit libero tempus pellentesque ligula, vivamus ac eleifend, volutpat posuere a rutrum ducimus in. Velit massa, justo pretium eros, maecenas vestibulum, nec congue in. Ad posuere blandit mattis in cras, porta in nunc. Sed sed non, senectus praesent senectus urna eu ultricies gravida, est cras, eget lectus luctus quam id luctus porttitor, vitae sagittis.</p>
 
@@ -268,4 +267,15 @@
 
 </footer>
 
+
+
+<!---------------------------------------webside---------------------------------------------->
+
+<div class=""></div>
+
+
+
+
+
 </body>
+</html>
